Center align header items and fix widths

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ body {
   border-bottom: 0.1rem solid var(--color-grey-light-2);
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .container--content {
   display: flex;
@@ -67,6 +68,22 @@ body {
 
 .logo {
   height: 3rem;
+}
+
+.search__icon {
+  height: 1.5rem;
+  width: 1.5rem;
+}
+
+.user-nav {
+  display: flex;
+}
+.user-nav__icon {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+.user-nav__user-photo {
+  width: 2.5rem;
 }
 
 /*# sourceMappingURL=style.css.map */
