--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -12,6 +12,7 @@
     border-bottom: 0.1rem solid var(--color-grey-light-2);
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
 
   &--content {
